unpackaged/main/default/objects/ERS_Triage_Tab_Mapping__mdt/ERS_Triage_Tab_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ERS Triage Tab Mapping</label>
    <pluralLabel>ERS Triage Tab Mappings</pluralLabel>
</CustomObject>