unpackaged/main/default/objects/ERS_Triage_Tab_Mapping__mdt/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Tow</fullName>
            </value>
            <value>
                <fullName>Flat Tire</fullName>
            </value>
            <value>
                <fullName>Vehicle Lockout</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Extrication</fullName>
            </value>
            <value>
                <fullName>Home Lockout</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Extrication Tow Only</fullName>
            </value>
            <value>
                <fullName>Bicycle</fullName>
                <isActive>false</isActive>
                <label>Bicycle</label>
            </value>
            <value>
                <fullName>Lockout</fullName>
                <isActive>false</isActive>
                <label>Lockout</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>