unpackaged/main/default/objects/ERS_Triage_Tab_Mapping__mdt/fields/Triage_Tab_Mapping_Status__c.field-meta.xml
<CustomField>
    <fullName>Triage_Tab_Mapping_Status__c</fullName>
    <label>Triage Tab Mapping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>